--- a/learn-certs-pr/azure-for-sap-workloads-specialty/index.yml
+++ b/learn-certs-pr/azure-for-sap-workloads-specialty/index.yml
@@ -2,28 +2,27 @@
 title: 'Microsoft Certified: Azure for SAP Workloads Specialty'
 metadata:
   title: 'Microsoft Certified: Azure for SAP Workloads Specialty'
-  description: Architekten oder Ingenieure von Microsoft Azure für SAP Workloads verfügen über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards, die für den langfristigen Betrieb einer SAP-Lösung in Azure spezifisch sind.
+  description: Kandidaten für diese Prüfung sollten Architekten oder Ingenieure mit umfangreichen Erfahrungen und Kenntnissen der SAP Systemlandschaft und Branchenstandards sein, die spezifisch für die anfängliche Migration oder Integration und den langfristigen Betrieb einer SAP Lösung auf Microsoft Azure sind.
 uid: certification.azure-for-sap-workloads-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: |-
-  Kandidaten für Azure for SAP Workloads Specialty certification sollten Architekten oder Ingenieure sein, die über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards verfügen, die für den langfristigen Betrieb einer SAP-Lösung unter Microsoft Azure spezifisch sind.
-
-  Zu den Aufgaben für diese Rolle gehören Empfehlungen zu Services und die jeweilige Anpassung der Ressourcen an die optimale Ausfallsicherheit, Leistung, Skalierung, Bereitstellung, Größe und Überwachung.
-
-  Architekten oder Ingenieure von Azure für SAP-Workload-Partner arbeiten mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Kunden zusammen, um Lösungen zu implementieren.
-
-  Ein Kandidat für diese Zertifizierungs sollte über umfangreiche Erfahrung und Kenntnisse in SAP-Anwendungen verfügen&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, Betriebssystemserver für SAP-Anwendungen und -Datenbanken, Azure-Portal, ARM-Vorlagen, Betriebssysteme, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Disaster Recovery-Design, Datenschutz Konzepte und Vernetzung.
-
-  Für diese rolle wird dringend empfohlen, zusätzlich zu den SAP-HANA- und Linux-Zertifizierungen eine Azure Administrator Associate- oder Azure Solutions Architect Expert-Zertifizierung zu erwerben.
-subTitle: Architekten oder Ingenieure von Microsoft Azure für SAP Workloads verfügen über umfassende Erfahrung und Kenntnisse der SAP-Systemlandschaft und der Industriestandards, die für den langfristigen Betrieb einer SAP-Lösung in Azure spezifisch sind.
+  Kandidaten für diese Prüfung sollten Architekten oder Ingenieure mit umfangreichen Erfahrungen und Kenntnissen der SAP Systemlandschaft und Branchenstandards sein, die spezifisch für die anfängliche Migration oder Integration und den langfristigen Betrieb einer SAP Lösung auf Microsoft Azure sind.
+  
+  Zu den Aufgaben eines Architekten oder Ingenieurs für Azure for SAP Workloads gehören Empfehlungen zu Services und die Anpassung von Ressourcen nach Bedarf, für optimale Ausfallsicherheit, Leistung, Skalierbarkeit, Bereitstellung, Größe und Überwachung.
+  
+  Architekten oder Ingenieure für Azure for SAP Workloads arbeiten mit Cloud administratoren, Cloud datenbankadministratoren und Kunden zusammen, um Lösungen zu implementieren.
+  
+  Ein Kandidat für diese Prüfung sollte über umfangreiche Erfahrung und Kenntnisse in SAP Anwendungen verfügen&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, OS Server für SAP-Anwendungen und -Datenbanken, Azure-Portal, Azure Marketplace, Azure Resource Manager-Vorlagen (ARM-Vorlagen), Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen, Hochverfügbarkeitsdesign, Notfallwiederherstellungs-Design, Datenschutzkonzepte und Networking.
+  
+  Für diese Prüfung wird dringend empfohlen, dass Sie zusätzlich zu den  SAP-Zertifizierungen über eine Azure Administrator Associate- oder Azure Solutions Architect Expert-Zertifizierung verfügen.
+subTitle: Kandidaten für diese Prüfung sollten Architekten oder Ingenieure mit umfangreichen Erfahrungen und Kenntnissen der SAP Systemlandschaft und Branchenstandards sein, die spezifisch für die anfängliche Migration oder Integration und den langfristigen Betrieb einer SAP Lösung auf Microsoft Azure sind.
 levels:
 - advanced
 skills:
 - SAP-Workloads nach Azure übertragen
-- Erstellen einer Azure-Lösung zur Unterstützung von SAP-Workloads
-- Erstellen und Bereitstellen von Azure SAP Workloads
-- Azure-Infrastruktur für SAP-Workloads überprüfen
-- Operationalisieren der Azure SAP-Architektur
+- Entwerfen und Implementieren einer Infrastruktur zur Unterstützung von SAP-Workloads 
+- Design und Implementierung von High Availability und Disaster Recovery (HA/DR)
+- Pflegen Sie SAP-Workloads in Azure
 roles:
 - administrator
 - solution-architect
