--- a/learn-certs-pr/d365-functional-consultant-customer-service/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-customer-service/index.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Customer Service Functional Consultant Associate'
-  description: 'Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.'
+  description: Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.
 uid: certification.d365-functional-consultant-customer-service
 certificationRenewalUid: renewal.d365-functional-consultant-customer-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
@@ -12,7 +12,7 @@ summary: |-
   Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58; - Arbeiten Sie als Dynamics 365-Fachberater an einigen Projekten mit.
   - Arbeiten Sie an einer Dynamics 365-Kundendienstimplementierung.
   - Treten Sie der Community unter [community.dynamics.com](https://community.dynamics.com/)bei.
-  - Nehmen Sie verfügbare Lernpfade auf [Microsoft Learn](/learn/browse/?expanded=dynamics-365&     products=dynamics-customer-service&roles=functional-consultant&resource_type=learning%20path)wahr.
+  - Nehmen Sie verfügbare Lernpfade auf [Microsoft Learn](/learn/browse/?expanded=dynamics-365&products=dynamics-customer-service&roles=functional-consultant&resource_type=learning%20path)wahr.
   - Führen Sie weitere praktische Übungen durch.
   - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
 subTitle: Microsoft Dynamics 365 Customer Service Functional Consultants schafft CX Lösungen, die schnell und flexibel sind und KI nutzen, um praxisorientierte Einsichten zu liefern, damit Verbraucheranforderungen vorausgesehen werden können.
@@ -53,9 +53,10 @@ paths:
 - uid: learn-bizapps.bring-ai
 - uid: learn-bizapps.improve-business-performance-ai-builder
 - uid: learn-bizapps.customer-service-hub-cases-slas
-- uid: learn-bizapps.work-with-entitlements-and-slas-dyn365-customer-service
 - uid: learn-bizapps.work-with-knowledge-management-solutions-dyn365-customer-service
-- uid: learn-dynamics.create-surveys
+- uid: learn-bizapps.work-with-entitlements-and-slas-dyn365-customer-service
+- uid: learn-dynamics.work-customer-service-omnichannel
+- uid: learn-dynamics.work-customer-service-insights
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC6G
 exams:
 - uid: exam.pl-200
@@ -85,4 +86,3 @@ resources:
 - title: Teilen Sie Ihre Zertifizierungsabzeichen
   description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
   href: ../badges.md
-
