--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -7,7 +7,7 @@ uid: exam.az-400
 displayName: AZ-400
 summary: |-
   <div>
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 25. Mai 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien haben, um kontinuierlich geschäftlichen Nutzen zu erzielen.
@@ -28,7 +28,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Entwickeln Sie eine Instrumentierungsstrategie (5-10%)
 - Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie (5-10%)
 - Entwicklung eines Sicherheits- und Compliance-Plans (10-15%)
@@ -81,4 +81,3 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
