--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -7,13 +7,13 @@ uid: exam.ms-600
 displayName: MS-600
 summary: |-
   <div>
-  <div><font color='red'><strong>Der unten stehende Prüfungsleitfaden zeigt die Änderungen, die am 25. Mai 2021 implementiert werden.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   </div>
-
+  
   Kandidaten für diese Prüfung sind Microsoft 365 Developers, die Anwendungen und Lösungen entwerfen, erstellen, testen und warten, die für die Produktivitäts- und Kollaborationsanforderungen von Unternehmen optimiert sind, die die Microsoft 365-Plattform nutzen.
-
+  
   Kandidaten für diese Prüfung beherrschen Microsoft Identity und Microsoft Graph. Sie verfügen über allgemeine Kenntnisse zu UI-Elementen (einschließlich Adaptive Cards und Office UI Fabric (Fluent UI)), Integrationspunkten (einschließlich Microsoft Teams, Office-Add-Ins, SharePoint Framework, umsetzbare Nachrichten) und zum Bestimmen von Workload-Plattformzielen.
-
+  
   Die Kandidaten sollten über Erfahrungen in der Entwicklung von Lösungen auf Microsoft Teams, Office Add-Ins oder SharePoint Framework in allen Phasen der Softwareentwicklung verfügen. Sie sollten über ein grundlegendes Verständnis von REST-APIs, JSON, OAuth2, OData, OpenID Connect, Microsoft identities (Microsoft-Identitäten) (einschließlich Azure AD- und Microsoft-accounts (Konten)), Azure AD B2C und Berechtigungs- und Genehmigungskonzepten verfügen.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Microsoft-Identity implementieren, Anwendungen mit Microsoft Graph erstellen, SharePoint erweitern und anpassen, Teams erweitern und Office erweitern.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -29,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der unten stehende Prüfungsleitfaden zeigt die Änderungen, die am 25. Mai 2021 implementiert werden.
+- Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.
 - Microsoft Identity einrichten (20-25%)
 - Erstellen Sie Apps mit Microsoft Graph (15-20%)
 - Erweitern und Anpassen von SharePoint (15-20%)
@@ -74,4 +74,3 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
