--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -7,13 +7,13 @@ uid: exam.ms-700
 displayName: MS-700
 summary: |-
   <div>
-  <div><font color='red'><strong>Der unten stehende Prüfungsleitfaden zeigt die Änderungen, die am 25. Mai 2021 implementiert werden.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   </div>
-
+  
   Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
-
+  
   Der Team administrator muss in der Lage sein, Team, Chats, Apps, Kanäle, Meetings, Audiokonferenzen, Live-Events und Anrufe zu planen, bereitzustellen und zu verwalten. Der Teamadministrator ist auch für das Upgrade von Skype für Unternehmen auf Teams verantwortlich. Kandidaten für diese Prüfung sollten über gute Kenntnisse in der Verwaltung von Teameinstellungen mit PowerShell verfügen.Der Teamadministrator verfügt über ein grundlegendes Verständnis für Integrationspunkte mit Anwendungen und Services, einschließlich, aber nicht beschränkt auf SharePoint, OneDrive for Business, Exchange, Azure AD und Office 365 Gruppen.Der Teamadministrator ist mit der Integration externer Anwendungen und Services vertraut.
-
+  
   Der Teams-Administrator arbeitet mit Telefonie-Technikern zusammen, um erweiterte Sprachfunktionen in Microsoft Teams zu integrieren. Diese Funktion ist nicht verantwortlich für die Konfiguration des direkten Routings, der Konfiguration des Call Routing oder der Integration der Telefonie. Der Teamadministrator kann mit anderen Workload-Administratorfunktionen arbeiten, einschließlich Sicherheit und Compliance, Messaging, Netzwerk, Identität und Geräte.
 subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Planen und Konfigurieren einer Microsoft-Team-Umgebung, Verwalten von Chat, Anrufen und Meetings sowie Verwalten von Teams und App-Richtlinien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -29,10 +29,10 @@ locales:
 levels:
 - intermediate
 skills:
-- Der unten stehende Prüfungsleitfaden zeigt die Änderungen, die am 25. Mai 2021 implementiert werden.
-- Planen und Konfigurieren einer Microsoft-Teamumgebung (45 -50%)
-- Verwalten von chats, Anrufen und meetings (30 -35%)
-- Verwalten von Team- und App-Richtlinien (20 -25%)
+- Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.
+- Planen und Konfigurieren einer Microsoft-Teamumgebung (45-50%)
+- Verwalten von chats, Anrufen und meetings (30-35%)
+- Verwalten von Team- und App-Richtlinien (20-25%)
 roles:
 - administrator
 products:
@@ -71,4 +71,3 @@ resources:
 - title: Prüfungsrichtlinien und FAQs
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
