--- a/learn-certs-pr/exams/az-220.yml
+++ b/learn-certs-pr/exams/az-220.yml
@@ -6,13 +6,13 @@ metadata:
 uid: exam.az-220
 displayName: AZ-220
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 25. Mai 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div> 
-
-  Der Azure IoT-Entwickler implementiert die Konfiguration und führt Codierungsaufgaben aus, die zum Erstellen und Verwalten der Cloud-und Edge-Elemente einer  IoT-Lösung erforderlich sind. Neben Konfiguration und Wartung von Geräten über cloud-Services stellt der IoT -Entwickler auch die Geräte selbst auf. Der IoT-Entwickler ist für die Wartung und Fehlerbehebung der Konfiguration der Geräte während deren gesamten Lebenszyklus verantwortlich. 
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div> 
   
-  Der IoT-Entwickler implementiert Entwurfsspezifikationen für  IoT-Lösungen, einschließlich Gerätetopologie, Konnektivität, Diagnose und Überwachung sowie Sicherheit. Der IoT- entwickelt und stellt Module bereit und konfiguriert Gerätenetworking für den IoT Edge-Teil der Lösung. Der IoT-Entwickler implementiert Entwürfe für Lösungen zur Verwaltung von Datenpipelines, einschließlich Überwachung und Datentransformation in Bezug auf IoT. Der IoT-Entwickler arbeitet mit dem Azure IoT-Architekten, Dateningenieuren und anderen Stakeholdern zusammen, um eine erfolgreiche Geschäftsintegration sicherzustellen.
+  Der Azure IoT-Entwickler implementiert die Konfiguration und führt Codierungsaufgaben aus, die zum Erstellen und Verwalten der Cloud-und Edge-Elemente einer IoT-Lösung erforderlich sind. Neben Konfiguration und Wartung von Geräten über cloud-Services stellt der IoT -Entwickler auch die Geräte selbst auf. Der IoT-Entwickler ist für die Wartung und Fehlerbehebung der Konfiguration der Geräte während deren gesamten Lebenszyklus verantwortlich.
   
-  IoT-Entwickler sollten ein allgemeines Verständnis der Gerätetypen und Azure-Services haben , einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung, KI und anderer Platform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, in mindestens einer von Azure IoT SDK unterstützten Sprache zu programmieren.
+  Der IoT-Entwickler implementiert Entwurfsspezifikationen für IoT-Lösungen, einschließlich Gerätetopologie, Konnektivität, Diagnose und Überwachung sowie Sicherheit. Der IoT- entwickelt und stellt Module bereit und konfiguriert Gerätenetworking für den IoT Edge-Teil der Lösung. Der IoT-Entwickler implementiert Entwürfe für Lösungen zur Verwaltung von Datenpipelines, einschließlich Überwachung und Datentransformation in Bezug auf IoT. Der IoT-Entwickler arbeitet mit dem Azure IoT-Architekten, Dateningenieuren und anderen Stakeholdern zusammen, um eine erfolgreiche Geschäftsintegration sicherzustellen.
+  
+  IoT-Entwickler sollten ein allgemeines Verständnis der Gerätetypen und Azure-Services haben, einschließlich Datenspeicheroptionen, Datenanalyse, Datenverarbeitung, KI und anderer Platform-as-a-Service-Optionen. IoT-Entwickler müssen in der Lage sein, in mindestens einer von Azure IoT SDK unterstützten Sprache zu programmieren.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die IoT-Lösungsinfrastruktur einzurichten. Bereitstellung und Verwaltung von Geräten, Implementieren von IoT Edge; Daten verarbeiten und verwalten; Überwachung, Fehlerbehebung und Optimierung von IoT-Lösungen; und Sicherheit implementieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4nBeC
@@ -26,7 +26,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - IoT-Lösungsinfrastruktur einrichten (10-15%)
 - Bereitstellung und Verwaltung von Geräten (15-20%)
 - IoT Edge implementieren (15-20%)
@@ -76,4 +76,3 @@ resources:
 - title: Prüfungsrichtlinien und häufig gestellten Fragen
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
