--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-303
 displayName: AZ-303
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 25. Mai 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändert.</strong></font><br/><br/></div> 
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am, 25. Mai 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div> 
 
   Kandidaten für diese Prüfung sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit. Kandidaten sollten über fortgeschrittene Kenntnisse zur Verwaltung von Azure verfügen. Kandidaten sollten über Azure-Entwicklungs- und DevOps-Prozesse Bescheid wissen. 
 
@@ -28,7 +28,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert. 
+- Der Inhalt dieser Prüfung wurde am 25. Mai 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Implementieren und Überwachen einer Azure-Infrastruktur (50-55%)
 - Implementierung von Management- und Sicherheitslösungen (25-30%)
 - Implementieren Sie Lösungen für Apps (10-15%)
