--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -6,16 +6,15 @@ metadata:
 uid: exam.az-500
 displayName: AZ-500
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 2. Juni 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den Fachkompetenzen herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
-
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 2. Juni 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+  
   Kandidaten für diese Prüfung sollten über Fachkenntnisse verfügen, Sicherheitskontrollen und den Schutz vor Bedrohungen zu implementieren, Identität und Zugriff verwalten sowie Daten, Anwendungen und Netzwerke zu schützen.
-
+  
   Zu den Aufgaben eines Azure Security-Engineers gehören das Aufrechterhalten der Sicherheitslage, das Erkennen und Beheben von Sicherheitslücken mit Hilfe verschiedener Sicherheitstools, das Implementieren eines Schutzes vor Bedrohung und das Reagieren auf Eskalationen von Sicherheitsvorfällen.
-
+  
   Azure-Sicherheitsingenieure sind häufig Teil eines größeren Teams, das sich der Cloud-basierten Verwaltung und Sicherheit widmet, und können auch Hybridumgebungen als Teil einer End-to-End-Infrastruktur sichern.
-
+  
   Ein Kandidat für diese Prüfung sollte mit Skripting und Automatisierung vertraut sein und ein ausgeprägtes Verständnis für Networking und Virtualisierung haben. Der Kandidat sollte außerdem mit Cloud-Funktionen, Azure-Produkten und -Services sowie anderen Microsoft-Produkten und -Services bestens vertraut sein.
-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identitäts- und Zugriffsmanagement, Plattformschutz implementieren, Sicherheitsmaßnahmen verwalten und Daten und Anwendungen schützen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70
@@ -33,7 +32,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 2. Juni 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 2. Juni 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Verwalten von Identität und Zugriff (30-35%)
 - Plattform-Schutz implementieren (15-20%)
 - Verwaltung von Sicherheitsvorgängen (25-30%)
@@ -84,4 +83,3 @@ resources:
 - title: Prüfungsrichtlinien und häufig gestellten Fragen
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
