--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -6,11 +6,11 @@ metadata:
 uid: exam.ms-100
 displayName: MS-100
 summary: |-
-  <div><font color='red'><strong>Der Inhalt dieser Prüfung wird am 2. Juni 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieser Prüfung wurde am 2. Juni 2021 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
   
-  Kandidaten für diese Prüfung sind Microsoft 365 Enterprise Administratoren, die an der Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365 Services mitwirken. Sie führen Verwaltungsaufgaben im Bereich der Microsoft 365 Mietverhältnisse für Unternehme durch, inkl. Identitäten, Sicherheit, Konformität und unterstützenden Technologien.
+  Kandidaten für diese Prüfung sind Microsoft 365 Enterprise Administratoren, die an Bewertung, Planung, Migration, Bereitstellung und Verwaltung von Microsoft 365 Services mitwirken. Sie führen Microsoft 365-Mandantenverwaltungsaufgaben für ein Unternehmen aus, einschließlich seiner Identitäten, Sicherheit, Compliance, Power Platform und unterstützenden Technologien.
   
-  Kandidaten haben Erfahrung in der praktischen Nutzung von Microsoft 365 Workloads und sollten seit mindestens einem Jahr als Microsoft 365 Workload Administrator gearbeitet haben (Exchange, SharePoint, Skype for Business, oder Windows as a Service). Kandidaten sollten auch Erfahrung haben im Networking, Server Administration und IT Grundlagen wie DNS, Active Directory und PowerShell.
+  Kandidaten verfügen über praktische Kenntnisse in Microsoft 365-Workloads und sollten Administratoren für mindestens einen Microsoft 365-Workload (Exchange, SharePoint, Teams) und Windows-as-a-Service sein. Kandidaten verfügen außerdem über praktische Kenntnisse in den Bereichen Netzwerk, Serveradministration und IT-Grundlagen wie DNS, Active Directory und PowerShell.
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwurf und Implementieren von Microsoft 365-Diensten, Verwaltung von Benutzeridentität und -rollen, Verwaltung von Zugriff und Authentifizierung, und Planung von Office 365-Workloads und -Anwendungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVE
@@ -22,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 2. Juni 2021 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändert.
+- Der Inhalt dieser Prüfung wurde am 2. Juni 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich geändert hat.
 - Entwerfen und Implementieren von Microsoft 365-Services (25-30%)
 - Benutzeridentität und Rollen verwalten (25-30%)
 - Zugriff und Authentifizierung verwalten (15-20%)
@@ -68,4 +68,3 @@ resources:
 - title: Prüfungsrichtlinien und häufig gestellten Fragen
   description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
   href: ../certification-exam-policies.md
-
